# magistrsko-delo

./: .gitignore  .gitmodules  README.md
crochet/: .gitignore  README.md  USAGE.txt  crochet.cabal
crochet/app/: ArgumentParser.hs  Exception.hs  Main.hs
crochet/app/Language/: Converter.hs  Interpreter.hs  Language.hs  Optimizer.hs  Parser.hs  Printer.hs  TypeChecker.hs
crochet/app/Language/Parser/: Internal.hs  Utils.hs
crochet/app/Language/TypeChecker/: Internal.hs  Types.hs  Unify.hs
crochet/app/Stg/: ArityInference.hs  BorrowCheck.hs  BoundVariables.hs  FreeVariables.hs  Interpreter.hs  MoveCheck.hs  NameResolution.hs  Ownership.hs  Parser.hs  Pretty.hs  Stg.hs  Types.hs
crochet/app/Stg/BorrowCheck/: Borrows.hs  Exception.hs  Internal.hs  Lifetime.hs  Moves.hs
crochet/app/Stg/Interpreter/: Debug.hs  Evaluation.hs  GarbageCollection.hs  Internal.hs  Memory.hs  Types.hs  Utils.hs
crochet/app/Stg/Interpreter/Debug/: Html.hs  Print.hs
crochet/app/Stg/Parser/: Internal.hs  Utils.hs
crochet/examples/: README.md  dangling_pointer.wool  dangling_pointer_case_of.wool  dangling_pointer_constructor.wool  dangling_pointer_nested.wool  data_types.wool  example.wool  example_valid_moves.wool  foundation.wool  identity.wool  lambda.wool  map.wool  no_dangling_pointer.wool  pack.wool  pair.wool  plus.wool  self_reference.wool  type_definitions.wool  type_hints.wool  unused_variables.wool  unused_variables_nested.wool  zip_with.wool
crochet/examples/arithmetic_operations/: arithmetic_operations.wool
crochet/examples/arithmetic_operations/arithmetic_operations_steps/: step1.html  step10.html  step11.html  step12.html  step13.html  step14.html  step15.html  step16.html  step17.html  step18.html  step19.html  step2.html  step20.html  step21.html  step22.html  step23.html  step24.html  step25.html  step26.html  step27.html  step28.html  step29.html  step3.html  step30.html  step31.html  step32.html  step33.html  step34.html  step35.html  step36.html  step37.html  step38.html  step39.html  step4.html  step40.html  step41.html  step42.html  step43.html  step44.html  step45.html  (+18 more)
crochet/examples/map/: map.wool
crochet/examples/map/map_steps/: step1.html  step10.html  step11.html  step12.html  step13.html  step14.html  step15.html  step16.html  step17.html  step18.html  step19.html  step2.html  step20.html  step21.html  step22.html  step23.html  step24.html  step25.html  step26.html  step27.html  step28.html  step29.html  step3.html  step30.html  step31.html  step32.html  step33.html  step34.html  step35.html  step36.html  step37.html  step38.html  step39.html  step4.html  step40.html  step41.html  step42.html  step43.html  step44.html  step45.html  (+47 more)
dispozicija/: .gitignore  osebni_podatki_objava.tex  vloga_za_prijavo_teme_mag_SLO_v2.tex
dispozicija/bibliografija/: bibliography.bib
linear_lambda_calculus/: CHANGELOG.md  LICENSE  linear-lambda-calculus.cabal
linear_lambda_calculus/app/: Main.hs  Parser.hs  Types.hs
magistrsko_delo/: bibliography.bib  declaration.tex  magistrsko_delo.tex
magistrsko_delo/style/: thesis_style.tex
vmesno_porocilo/: Bizjak_Niki_Mentor_Slivnik.pptx
(+38 files in other folders)
