cabal-version:      2.4
name:               crochet
version:            0.1.0.0
synopsis:           A compiler for a lazy functional programming language.
author:             Niki Bizjak
maintainer:         bizjak.niki@gmail.com

executable crochet
    main-is:          Main.hs
    other-modules:    Language.Parser
                      Language.Parser.Utils
                      Language.Parser.Internal
                      Language.Language
                      Language.Printer
                      Language.TypeChecker
                      Language.TypeChecker.Internal
                      Language.TypeChecker.Unify
                      Language.TypeChecker.Types
                      Language.Converter
                      Language.Optimizer
                      Language.Interpreter
                      Stg.Stg
                      Stg.Interpreter
                      Exception
    build-depends:
        base == 4.17.2.0,
        directory == 1.3.7.1,
        containers == 0.6.7,
        mtl == 2.3.1,
    hs-source-dirs:   app
    default-language: Haskell2010
