cabal-version:      2.4
name:               crochet
version:            0.1.0.0
synopsis:           A compiler for a lazy functional programming language.
author:             Niki Bizjak
maintainer:         bizjak.niki@gmail.com

executable crochet
    main-is:          Main.hs
    other-modules:
        Stg.Stg
        Stg.Parser.Internal
        Stg.Parser.Utils
        Stg.Parser
        Stg.Pretty
        Stg.Ownership
        Stg.FreeVariables
        Stg.NameResolution
        Stg.MoveCheck
        Stg.BorrowCheck.Internal
        Stg.BorrowCheck.Lifetime
        Stg.BorrowCheck.Exception
        Stg.BorrowCheck
        Stg.Interpreter
    build-depends:
        base == 4.17.2.1,
        directory == 1.3.7.1,
        containers == 0.6.7,
        mtl == 2.3.1,
    hs-source-dirs:   app
    default-language: Haskell2010
