cabal-version:      2.4
name:               crochet
version:            0.1.0.0
synopsis:           A compiler for a lazy functional programming language.
author:             Niki Bizjak
maintainer:         bizjak.niki@gmail.com

executable crochet
    main-is:          Main.hs
    other-modules:
        ArgumentParser
        Stg.Stg
        Stg.Parser.Internal
        Stg.Parser.Utils
        Stg.Parser
        Stg.Pretty
        Stg.FreeVariables
        Stg.BoundVariables
        Stg.NameResolution
        Stg.ArityInference
        Stg.Interpreter.Types
        Stg.Interpreter.Memory
        Stg.Interpreter.Internal
        Stg.Interpreter.Evaluation
        Stg.Interpreter.Utils
        Stg.Interpreter.Debug.Html
        Stg.Interpreter.Debug.Print
        Stg.Interpreter
    build-depends:
        base == 4.17.2.1,
        directory == 1.3.7.1,
        containers == 0.6.7,
        mtl == 2.3.1,
        blaze-html == 0.9.2.0,
        filepath,
        optparse-applicative == 0.18.1.0,
    hs-source-dirs:   app
    default-language: Haskell2010
